--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "construct-react",
-  "version": "1.0.1",
+  "version": "1.0.2",
+  "main": "index.js",
+  "bin": {
+    "construct-react": "./index.js"
+  },
   "keywords": [
     "react",
     "create-react",
